<resources>
    <string name="app_name">Covid19 Information</string>
    <string name="title_home">トップ</string>
    <string name="title_dashboard">感染が心配な時</string>
    <string name="title_notifications">検査状況</string>
    <string name="dash">-</string>
    <string name="action_setting">action_setting</string>
    <string name="action_sync">action_sync</string>
    <string name="tab_text_1">検査実施状況</string>
    <string name="tab_text_2">検査実施件数</string>
    <string name="tab_text_3">電話窓口相談件数</string>
    <string name="tab_text_4">窓口相談件数</string>
    <string name="tab_text_5">検査実施人数</string>
    <string name="title_setting">都道府県の設定</string>
    <string name="text_area_guide">エリアを選択</string>
    <string name="title_news">最新のニュース</string>
    <string name="navigation_drawer_header">navigation_drawer_header</string>
    <string name="miss_data_text">データが無い場合はすべて0である</string>
</resources>
