<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_browse"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="ウェブで表示する" />
    </group>
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_new_releases_black_24dp"
            android:title="@string/title_news" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/title_dashboard" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="このアプリについて" />
        <item
            android:id="@+id/navigation_setting_area"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_setting" />
    </group>
</menu>
