<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="jp.covid19_kagawa.covid19information.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="jp.covid19_kagawa.covid19information.ui.guide.GuideFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="jp.covid19_kagawa.covid19information.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/area_setting"
        android:name="jp.covid19_kagawa.covid19information.ui.preferences.PrefectureFragment"
        android:label="都道府県の設定">
        <action
            android:id="@+id/action_area_to_pref"
            app:destination="@+id/pref_setting" />
    </fragment>

    <fragment
        android:id="@+id/pref_setting"
        android:name="jp.covid19_kagawa.covid19information.ui.preferences.PrefectureFragment"
        android:label="都道府県の設定" />

    <!--Global action-->
    <action
        android:id="@+id/open_settings_fragment"
        app:destination="@+id/area_setting" />
</navigation>
